--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,11 @@
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
-
+.vscode/
 # Mono auto generated files
 mono_crash.*
-
+obj/
+bin/
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
